--- a/slides/tutorials_precipitation_answers.qmd
+++ b/slides/tutorials_precipitation_answers.qmd
@@ -1,16 +1,18 @@
-.docname      {Tutorial-Precipitation-Answers}
-.doctype      {paged}
-.doclang      {English}
-.theme        {paperwhite} layout:{latex}
+.docname{Tutorial-Precipitation-Answers}
+.theme{beaver} layout:{latex}
+.doctype{paged}
+.doclang{English}
 
-.include {definitions.qmd}
+.include{definitions.qmd}
 
-.footer
-    Tutorial 2: Precipitation - Answers
+.pagemargin{bottomleft}
+    Model Answers
 
-##! Precipitation
+.pagemargin{topright}
+    Precipitation
 
-#### Top End Thunderstorms
+# Precipitation
+## Top End Thunderstorms
 
 | Required condition | Why essential |
 |--------------------|--------------|
@@ -20,35 +22,20 @@
 
 If any one is missing, vapour remains suspended, clouds persist without rainfall, or virga evaporates before reaching ground.
 
----
-
 ## A 2 Singapore vs Scottish Highlands
-
-a. Singapore ⇒ **collision–coalescence** in warm (> 0 °C) cumulonimbus; Highlands ⇒ **Bergeron (ice-crystal) process** in mixed-phase nimbostratus.
-
-b. Singapore: whole cloud above freezing, strong up-draughts → droplets of different radii collide & merge.  Highlands: vertical cross-section spans −5 °C to −15 °C; ice crystals grow at expense of super-cooled droplets because e_s(ice) < e_s(liq); moderate lifting in frontal system.
-
-c. Warm-cloud rain gives **large, uniform raindrops**, often > 2 mm, causing high-intensity bursts (> 100 mm h⁻¹).  Bergeron process yields **smaller frozen aggregates**, which melt on descent → lower intensity but longer-lasting precipitation, w/ mixed graupel or wet snow.
-
----
+- Singapore ⇒ **collision–coalescence** in warm (> 0 °C) cumulonimbus; Highlands ⇒ **Bergeron (ice-crystal) process** in mixed-phase nimbostratus.
+- Singapore: whole cloud above freezing, strong up-draughts → droplets of different radii collide & merge.  Highlands: vertical cross-section spans −5 °C to −15 °C; ice crystals grow at expense of super-cooled droplets because e_s(ice) < e_s(liq); moderate lifting in frontal system.
+- Warm-cloud rain gives **large, uniform raindrops**, often > 2 mm, causing high-intensity bursts (> 100 mm h⁻¹).  Bergeron process yields **smaller frozen aggregates**, which melt on descent → lower intensity but longer-lasting precipitation, w/ mixed graupel or wet snow.
 
 ## A 3 Sierra Nevada
-
-*(Annotated copy required.)*
-
-a.i. Max orographic band = 1 000–3 000 m on windward (western) flank.
-a.ii. Rain shadow = Owens Valley east of crest (< 300 mm yr⁻¹).
-
-b. Dry-adiabatic: 9.8 °C km⁻¹ up to LCL (~1 200 m), then saturated rate 6 °C km⁻¹ to 3 000 m: ΔT ≈ −23 °C.  Descent: warms at dry rate: +29 °C to valley floor.
-
-c. Example towns: **Bishop, Lone Pine.**  Both import water via Los Angeles Aqueduct; pumping from deep alluvial fans carefully managed because local recharge is minimal under rain-shadow conditions.
-
----
+- Answers:
+    - Max orographic band = 1 000–3 000 m on windward (western) flank.
+    - Rain shadow = Owens Valley east of crest (< 300 mm yr⁻¹).
+- Dry-adiabatic: 9.8 °C km⁻¹ up to LCL (~1 200 m), then saturated rate 6 °C km⁻¹ to 3 000 m: ΔT ≈ −23 °C.  Descent: warms at dry rate: +29 °C to valley floor.
+- Example towns: **Bishop, Lone Pine.**  Both import water via Los Angeles Aqueduct; pumping from deep alluvial fans carefully managed because local recharge is minimal under rain-shadow conditions.
 
 ## A 4 Pará Clearing Experiment
-
 Total rainfall: Forest = 112 mm; Pasture = 132 mm (≈ +15 %).
-
 Possible biases & fixes
 
 | Bias / micro-site factor | Likely effect | Mitigation |
@@ -59,12 +46,7 @@ Possible biases & fixes
 
 A succinct paired-bar plot (Forest vs Pasture, 14 bars) completes part (a).
 
----
-
 ## A 5 Himalayan Catchment
-
-a. **Hypsometric method** chosen.
-
-b. Because gauges cluster low (< 1 800 m) yet ~40 % of basin lies above snowline, rainfall–altitude gradient is strong & non-linear.  Thiessen would over-weight lowlands; hypsometric belts (e.g. 500 m intervals) allocate snowfall intensities based on elevation and aspect → better represent orographic input and snow-water storage.
-
-c. Supplement **GPM (Global Precipitation Measurement) IMERG satellite** or regional weather-radar composites.  Calibrate bias using available gauges; blend with hypsometric zones through kriging or Bias-Corrected Precipitation Reconstruction (BCPR) to refine daily grids.
+- **Hypsometric method** chosen.
+- Because gauges cluster low (< 1 800 m) yet ~40 % of basin lies above snowline, rainfall–altitude gradient is strong & non-linear.  Thiessen would over-weight lowlands; hypsometric belts (e.g. 500 m intervals) allocate snowfall intensities based on elevation and aspect → better represent orographic input and snow-water storage.
+-  Supplement **GPM (Global Precipitation Measurement) IMERG satellite** or regional weather-radar composites.  Calibrate bias using available gauges; blend with hypsometric zones through kriging or Bias-Corrected Precipitation Reconstruction (BCPR) to refine daily grids.
