--- a/slides/03_evaporation.qmd
+++ b/slides/03_evaporation.qmd
@@ -7,6 +7,7 @@
   - Sia Ghelichkhan
 
 .include {definitions.qmd}
+.include {definitions_slides.qmd}
 
 #!
 .fullspan
@@ -19,8 +20,6 @@
     ---
 
     ###! _Dr. Sia Ghelichkhan_
-
-
 
 # Objectives
 
