--- a/slides/05_groundwater.qmd
+++ b/slides/05_groundwater.qmd
@@ -7,6 +7,7 @@
   - Sia Ghelichkhan
 
 .include {definitions.qmd}
+.include {definitions_slides.qmd}
 
 #!
 .fullspan
@@ -19,6 +20,9 @@
     ---
 
     ###! _Dr. Sia Ghelichkhan_
+
+# Objectives
+
 
 # Introduction to Groundwater Flow Theory
 
